--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,8 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    
+  racket-package-ci:
+    runs-on: ubuntu-latest    
     steps:
     - uses: actions/checkout@v1
     - uses: jackfirth/racket-package-ci-action@master
