Specify version of racket package CI action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest    
     steps:
     - uses: actions/checkout@v1
-    - uses: jackfirth/racket-package-ci-action@master
+    - uses: jackfirth/racket-package-ci-action@v0.1.1
       with:
         name: rebellion
